# socorro

./: LICENSE.md  README.md
cmake/: CMakeLists.txt
cmake/Modules/: PreventInSourceBuilds.cmake
cmake/Presets/: gcc.cmake  intel.cmake
doc/: GUIDE.md  INSTALL.md  Makefile  index.html  makedocs  makedocs2
doc/LATEX/: High_level_functionality.tex  Makefile  high_level.tex  memory.tex  modularity.tex  socorro.tex  tutorial.tex
doc/LATEX/figs/: biglc_hierarchy.eps  biglc_hierarchy.fig  complex.eps  complexfork.eps  complexfork2.eps  constraint.eps  constraint.fig  datamap.eps  datamap.fig  fork.eps  grid.eps  grid.fig  handle.eps  lc_hierarchy.eps  lc_hierarchy.fig  share.eps
doc/LATEX/papers/: Figure_1.ps  Figure_2.ps  OEPcutoff.tex  OEPldrdReport.tex  OEPnotes.tex  OEPpaper.tex  OEPreport.tex  cond_number_plot.eps
doc/LATEX/papers/ioplatex/: OEPpaper.tex  cvg_1eV.eps  cvg_1eV_exx.eps  cvg_1eV_exx.fig  cvg_room.eps  cvg_room_exx.eps  cvg_room_exx.fig  finite_diff_high.eps  finite_diff_high.fig  finite_diff_room.eps  finite_diff_room.fig
lib/: .gitignore  README.md
lib/fftmpi/: Install.py
lib/fftw2/: Install.py
lib/fftw3/: Install.py
lib/lapack/: Install.py
lib/libxc/: Install.py
lib/scalapack/: Install.py
src/: .gitignore  Makefile  arg_mod.F90  atomic_density_mod.F90  atomic_density_ncp_mod.F90  atomic_density_paw_mod.F90  atomic_operators_mod.F90  atomic_operators_ncp_mod.F90  atomic_operators_paw_mod.F90  atomic_potential_mod.F90  atomic_potential_ncp_mod.F90  atomic_potential_paw_mod.F90  atoms_mod.F90  axc_density_libxc_mod.F90  axc_density_mod.F90  axc_density_native_mod.F90  axc_mod.F90  born_oppenheimer_mod.F90  btree_mod.F90  btree_support_mod.F90  check_kpoints_mod.F90  check_symmetry_mod.F90  config_fh_mod.F90  config_sc_mod.F90  config_td_mod.F90  cpointer_mod.F90  crystal_mod.F90  ctof_io.c  ctof_io.h  diary_mod.F90  dyad_kpoint_mod.F90  dyad_mod.F90  ehrenfest_mod.F90  eigensolver_mod.F90  electrons_fh_mod.F90  electrons_sc_mod.F90  electrons_td_mod.F90  error_mod.F90  ewald_mod.F90  exchange_dyad_mod.F90  (+56 more)
src/MAKE/: Makefile.debug  Makefile.release
src/MAKE/OPTIONS/: Makefile.debug  Makefile.fftw2  Makefile.minsizerel  Makefile.none  Makefile.release  Makefile.relwithdebinfo
src/MAKE/TOOLS/: f90makedep.pl
tests/al_ncp/: NCP.Al1  NCP.Al2  NCP.Al3  README  argvf  crystal  diaryf_3
tests/alas_ncp/: NCP.As3  README  argvf  crystal  dcompf_4  diaryf_4
tests/aln_zinc_blende_ncp/: NCP.Al1  NCP.Al2  NCP.N1  README  argvf  crystal  diaryf_5
tests/caf2_paw/: PAW.Ca  PAW.F  argvf  crystal  diaryf_6
tests/diamond_paw/: PAW.C  README  argvf  crystal  diaryf_4
tests/gan_paw/: PAW.Ga  PAW.N  README  argvf  crystal  diaryf_8
tests/h2o/: NCP.HBLY  NCP.HPBE  NCP.OBLY  NCP.OPBE  README  README_blyp  argvf  argvf_blyp  crystal  crystal_blyp  diaryf_8  diaryf_8_blyp
tests/li_paw/: PAW.Li  README  argvf  crystal  diaryf  diaryf_4  errorf  run.socorro
tests/si16_dimer_sd/: NCP.Si1  README  argvf  diaryf_sd_01_4  diaryf_sd_02_4
tests/si16_dimer_sd/02/: crystal
tests/si16_neb_qm/: README  argvf  diaryf_00  diaryf_05  diaryf_qm_01_4  diaryf_qm_02_4  diaryf_qm_03_4  diaryf_qm_04_4
tests/si16_neb_qm/00/: crystal
tests/si16_neb_qm/01/: crystal
tests/si16_neb_qm/02/: crystal
tests/si16_neb_qm/03/: crystal
tests/si16_neb_qm/04/: crystal
tests/si_cubic_md_ncp/: README  argvf  crystal  diaryf_8  initial_velocity
tests/si_cubic_ncp/: NCP.Si2  NCP.Si3  NCP.Si4  NCP.SiBLYP  NCP.SiPBE  NCP.SiPW91  README  argvf  argvf_rs  diaryf_8  diaryf_rs_7
tests/si_cubic_relax_ncp/: README  argvf  argvf_rs  crystal  diaryf_8  diaryf_rs_8
tests/si_ncp/: README  argvf  argvf_fh  argvf_libxc  argvf_libxc_spin  argvf_nekg  argvf_restart_efe  argvf_restart_f  argvf_restart_fe  argvf_restart_fe_cc  argvf_restart_fe_kg2  argvf_spin_restart_fe  argvf_strain  argvf_vspin  crystal  crystal_strain  diaryf_4  diaryf_4_fh  diaryf_4_libxc  diaryf_4_restart_efe  diaryf_4_restart_f  diaryf_4_restart_fe  diaryf_4_restart_fe_cc  diaryf_4_restart_fe_kg2  diaryf_4_strain  diaryf_6_nekg  diaryf_8_libxc_spin  diaryf_8_spin_restart_fe  diaryf_8_vspin  diaryf_9  restartf  restartf_spin
tests/si_paw/: README  argvf  argvf_libxc  argvf_libxc_spin  argvf_restart_f  argvf_restart_fe  argvf_restart_fe_cc  argvf_spin_restart_fe  argvf_vspin  crystal  diaryf_4  diaryf_4_libxc  diaryf_4_restart_f  diaryf_4_restart_fe  diaryf_4_restart_fe_cc  diaryf_8_libxc_spin  diaryf_8_spin_restart_fe  diaryf_8_vspin  restartf  restartf_spin
tests/si_paw_cubic/: README  argvf  argvf_rs  crystal  diaryf_8  diaryf_rs_8
tests/si_paw_cubic_relax/: PAW.Si  argvf  argvf_rs  crystal  diaryf_8  diaryf_rs_8
tests/si_paw_pbe/: PAW.Si  argvf  crystal  diaryf_4
tests/si_quench_ncp/: README  argvf  argvf_full  crystal  diaryf_5  diaryf_5_full
tests/si_wurtzite_ncp/: README  argvf  crystal  diaryf_4
